--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -181,9 +181,9 @@
     <template>
         <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <juicy-tile-editor-form id="form"
-                                selecteditems="{{selectedItems}}"
-                                editedtiles="{{editedTiles}}"
-                                tilelists="{{tileLists}}"
+                                selected-items="{{selectedItems}}"
+                                edited-tiles="{{editedTiles}}"
+                                tile-lists="{{tileLists}}"
                                 modified="{{modified}}"
                                 on-juicy-tile-editor-revert="revertAction"
                                 on-juicy-tile-editor-form-tree-changed="treeChangedAction"
