One more step forward to migrate juicy-tile-tree to Polymer 1.1
https://github.com/Juicy/juicy-tile-editor/issues/84

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 setup: {
                     gutter: 16,
                     items: [
-                      { "width": 128, "height": 100, "priority": 0.5, "id": 0 },
+                      { "width": 128, "height": 100, "priority": 0.5, "id": 0, hidden: false },
                       {
                           "width": 512, "height": 100, "priority": 0.48, "gutter": 8,
                           "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"></div>",
