--- a/src/juicy-tile-tree.html
+++ b/src/juicy-tile-tree.html
@@ -9,7 +9,7 @@
         <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <link href="css/juicy-tile-tree.css" rel="stylesheet" />
         <ul id="root">
-            <juicy-tile-tree-branch tree="{{that}}" expanded="{{that.expanded}}" branches="{{tree}}"></juicy-tile-tree-branch>
+            <juicy-tile-tree-branch tree="[[that]]" expanded="[[expanded]]" branches="[[tree]]"></juicy-tile-tree-branch>
         </ul>
         <shadow></shadow>
     </template>
