--- a/src/juicy-tile-tree-branch.html
+++ b/src/juicy-tile-tree-branch.html
@@ -5,7 +5,7 @@
             <li class$="{{getLiClass(expanded, branch)}}">
                 <div class$="{{getBranchClassName(branch)}}" on-mouseover="hoverAction" on-mouseout="blurAction" title="{{toRootName(branch.node)}}" branch="{{branch}}" item="{{item}}">
                     <juicy-toggle-icon-button class="expand" icon-on="jte-icon-angle-down" icon-off="jte-icon-angle-right" 
-                        checked="{{getIsExpanded(tree, branch)}}" on-change="setIsExpanded" branch="{{branch}}"></juicy-toggle-icon-button>
+                        checked="{{getIsExpanded(expanded, branch)}}" on-click="setIsExpanded" branch="{{branch}}"></juicy-toggle-icon-button>
                     <div on-tap="tapAction" class="txt" branch="{{branch}}" item="{{item}}">
                         <i class="jte-icon jte-icon-th-large" title="juicy-tile-list"></i>
                         <input type="text" class$="{{getInputClassName(tree.editBranch, branch)}}" readonly?="{{!getIsBranchEdited(tree.editBranch, branch)}}" value="{{branch.node.setup.itemName}}"
@@ -14,7 +14,7 @@
                 </div>
                 <ul class="branch">
                     <template is="dom-repeat" items="{{branch.node.setup.items}}" as="item" id="item">
-                        <juicy-tile-tree-item tree="{{tree}}" expanded="{{expanded}}" branch="{{branch}}" item="{{item}}"></juicy-tile-tree-item>
+                        <juicy-tile-tree-item tree="[[tree]]" expanded="[[expanded]]" branch="[[branch]]" item="[[item]]"></juicy-tile-tree-item>
                     </template>
                 </ul>
             </li>
@@ -24,7 +24,6 @@
         Polymer({
             is: "juicy-tile-tree-branch",
             attached: function () {
-                debugger;
             },
             properties: {
                 tree: {
@@ -42,7 +41,7 @@
                 var css = ["drop"];
                 var id = this.tree.toRootName(branch.node);
 
-                if (this.expanded[id]) {
+                if (this.tree.expanded[id]) {
                     css.push("exapnded");
                 } else {
                     css.push("collapsed");
@@ -65,8 +64,8 @@
             toRootName: function (node) {
                 return this.tree.toRootName(node);
             },
-            getIsExpanded: function (tree, branch) {
-                return !!this.expanded[tree.toRootName(branch.node)];
+            getIsExpanded: function (expanded, branch) {
+                return !!this.tree.expanded[this.tree.toRootName(branch.node)];
             },
             getIsBranchEdited: function (editBranch, branch) {
                 return editBranch == branch;
@@ -98,10 +97,11 @@
 
                 var value = ev.currentTarget.checked;
                 var id = this.tree.toRootName(branch.node);
+                var expanded = this.tree.expanded;
 
-                this.expanded[id] = value;
-                this.notifyPath("expanded", {});
-                this.notifyPath("expanded", this.expanded);
+                expanded[id] = value;
+                this.tree.notifyPath("expanded", {});
+                this.tree.notifyPath("expanded", expanded);
             }
         });
     </script>
