--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <template is="dom-bind" id="root">
             <template is="dom-if" if="{{model.editingMode}}">
                 <div id="aboveOverlay">
-                    <juicy-tile-editor selectionmode></juicy-tile-editor>
+                    <juicy-tile-editor selection-mode="true"></juicy-tile-editor>
                 </div>
                 <script>
                     document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
