--- a/src/juicy-tile-tree-item.html
+++ b/src/juicy-tile-tree-item.html
@@ -174,14 +174,7 @@
                 return !!item.hidden;
             },
             setIsExpanded: function (ev, index) {
-                var item = ev.currentTarget.item;
-                var value = ev.currentTarget.checked;
-                var id = this.tree.getFullId(item);
-                var expanded = this.tree.expanded;
-
-                expanded[id] = value;
-                this.tree.notifyPath("expanded", {});
-                this.tree.notifyPath("expanded", expanded);
+                return this.tree.setIsExpanded(null, ev.currentTarget.item, ev.currentTarget.checked);
             },
             setVisibility: function (ev, index) {
                 var item = ev.currentTarget.item;
