--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -209,7 +209,7 @@
                     <h1 id="sidebarHeader">
                         Elements
                     </h1>
-                    <juicy-tile-tree id="treeView" tree="{{tree}}"
+                    <juicy-tile-tree id="treeView" tree="[[tree]]"
                                      on-juicy-tile-tree-highlight="treeHighlightAction"
                                      on-juicy-tile-tree-highlight-extend="treeHighlightExtendAction"
                                      on-juicy-tile-tree-highlight-remove="treeHighlightRemoveAction"
